--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svgicon",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Svg Icon for svg2react-loader",
   "main": "build/index.js",
   "scripts": {},
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/yanbingbing/svgicon/issues"
   },
-  "homepage": "https://github.com/yanbingbing/svgicon#readme"
+  "homepage": "https://github.com/yanbingbing/svgicon#readme",
+  "dependencies": {
+    "object-assign": "^4.1.0"
+  }
 }
