--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "svgicon",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Svg Icon for svg2react-loader",
-  "main": "build/index.js",
-  "scripts": {},
+  "main": "lib/svgicon.js",
+  "scripts": {
+    "build": "BABEL_ENV=commonjs webpack src/index.js lib/svgicon.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yanbingbing/svgicon.git"
@@ -20,6 +22,19 @@
   },
   "homepage": "https://github.com/yanbingbing/svgicon#readme",
   "dependencies": {
-    "object-assign": "^4.1.0"
+    "object-assign": "^4.1.0",
+    "react": "^15.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-ie": "^6.6.2",
+    "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.2",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.9"
   }
 }
